--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,87 @@
-site_name: My Docs
+site_name: Antjrobles Second's Brain
+site_url: https://mkdocs.antjrobles.tech/
+site_description: Documentation with Markdown.
+site_author: Antjrobles
+site_dir: site
 
+dev_addr: 192.168.0.61:8018
+repo_url: https://github.com/Antjrobles/My-Second-Brain
+repo_name: My Second Brain
+edit_uri: '?query=root/path/docs/'
+
+nav:
+  - Home: index.md
+  - DAM:
+      - Programación:
+          - 1. Introducción a la Programación: 'DAM/Programación/Introducción a la Programación.md'
+          - Creación de mi primer programa: 'DAM/Programación/Tema2.md'
+          - Utilización de objetos: 'DAM/Programación/Tema3.md'
+          - Uso de estructuras de control: 'DAM/Programación/Tema4.md'
+          - Desarrollo de Clases: 'DAM/Programación/Tema5.md'
+          - Estructuras de almacenamiento de datos: 'DAM/Programación/Tema6.md'
+          - Utilización avanzada de clases: 'DAM/Programación/Tema7.md'
+          - 8. Colecciones de Clases: 'DAM/Programación/Unidad 08 - Colecciones de Clases.md'
+          - Almacenado Datos: 'DAM/Programación/Tema9.md'
+          - Comunicándonos con el usuario. Interfaces: 'DAM/Programación/Tema10.md'
+          - Acceso a Bases de Datos: 'DAM/Programación/Tema11.md'
+      - Base De Datos:
+          - 1. Almacenamiento de la información: 'DAM/Base de Datos/Tema1.md'
+          - 2. Bases de datos relacionales: 'DAM/Base de Datos/Bases de datos relacionales.md'
+          - 6. Programación de base de datos: 'DAM/Base de Datos/Unidad 06 - Programacion de base de datos.md'
+      - Entornos de Desarrollo:
+          - 4. Optimización y Documentación: 'DAM/Entornos de Desarrollo/Optimización y Documentación.md'
+      - Formación y Orientación Laboral:
+          - 1. Inserción laboral, búsqueda de empleo y emprendimiento: 'DAM/Formación y Orientación Laboral/kkk.md'
+          - 7. Plan de prevención de empresas: 'DAM/FOL/Unidad 07 - Plan de prevencion en la empresa.md'
+      - Sistemas Informáticos:
+          - Administración de un Sistema Linux: 'DAM/Sistemas Informáticos/Administracion de un sistema Linuz.md'
+      - Lenguaje de Marcas y Sistemas de Gestión de la Información:
+          - sdasdasd: 'DAM/LMSGI/sdasd.md'
+
+## [Material for MkDocs](https://squidfunk.github.io/mkdocs-material/)
 theme:
   name: material
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to light mode
+      primary: cyan
+      accent: cyan
+  logo: assets/AR sin Fondo.png
+  favicon: /assets/images/favicon.ico
+  features:
+    - header.autohide
+    - search.suggest
+    - search.highlight
+    - content.tabs.link
+    - navigation.instant
+    - navigation.tracking
+    - navigation.top
+    - content.code.annotate
+
+      # PLUGINS #
+plugins:
+  #  - offline
+  - search:
+  - tags:
+      tags_file: tags.md
+
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - attr_list
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+
+    ## Footer Copyright
+copyright: Copyright &copy; 2024 <a href="https://twitter.com/Antjrobles">Antonio Robles</a>, Maintained by the <a href="/about/release-notes/#maintenance-team">Antjrobles Teams</a>
